# jobfinder

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_phase_1_tables.py  0002_approval_request_review_fields.py  0003_policy_evidence_expiry.py  0004_candidate_document_records.py  0005_drafting_runs.py  0006_autofill_packets.py  0007_final_review_packets.py  0008_manual_handoff_records.py  0009_operator_control_plane.py  0010_live_review_items.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/adapters/: __init__.py  ashby.py  base.py  common.py  dedupe.py  fixtures.py  greenhouse.py  jsonld.py  lever.py  schema.py  smartrecruiters.py  static_html.py  workable.py
apps/api/tests/: test_adapters.py  test_applications.py  test_approval_requests.py  test_audit_event_service.py  test_audit_explorer.py  test_autofill_packets.py  test_candidate_workspace.py  test_dashboard.py  test_discovery_queue.py  test_domain_normalization.py  test_drafting.py  test_extraction_pipeline.py  test_final_review_packets.py  test_health.py  test_jobs.py  test_live_discovery.py  test_manual_handoff.py  test_observability.py  test_openapi_contract.py  test_operator_auth.py  test_review_queue.py  test_robots_cache.py  test_runtime_settings.py  test_settings.py  test_source_policy_api.py  test_source_policy_service.py  test_source_registry_service.py
(+120 files in other folders)
