[project]
name = "jobfinder-api"
version = "0.1.0"
description = "FastAPI foundation for the governed Jobfinder backend."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.scripts]
app = "app.main:app"

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]
